Add controller file and test home page

--- a/CODE/bum/src/main/resources/templates/Home.html
+++ b/CODE/bum/src/main/resources/templates/Home.html
@@ -9,14 +9,22 @@
 
     <header>
         <h1>License Marketplace System</h1>
-        <!-- Bạn có thể thêm menu, nút đăng nhập ở đây -->
+
     </header>
 
     <div class="main-content">
         <h2>Nội dung chính của trang</h2>
         <p>Đây là nơi chứa nội dung của bạn. Header sẽ luôn dính ở trên và Footer sẽ luôn dính ở dưới.</p>
         <p>Hãy thử cuộn trang xuống để xem hiệu ứng.</p>
-        
+<!--        <div th:if="${mostPurchasedProduct}">-->
+<!--            <h2>-->
+<!--                Tên sản phẩm xịn xò: <span th:text="${mostPurchasedProduct.name}"></span>-->
+<!--            </h2>-->
+<!--        </div>-->
+<!--        <div th:unless="${mostPurchasedProduct}">-->
+<!--            <p>Chưa có dữ liệu về sản phẩm bán chạy.</p>-->
+<!--        </div>-->
+
         <div class="placeholder">
             Cuộn xuống nữa...
         </div>
