--- a/CODE/bum/src/main/resources/templates/Home.html
+++ b/CODE/bum/src/main/resources/templates/Home.html
@@ -3,7 +3,7 @@
 <head>
     <title>License Marketplace System</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>
 </head>
 <body>
 
