--- a/CODE/bum/src/main/resources/templates/Home.html
+++ b/CODE/bum/src/main/resources/templates/Home.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      xsi:schemaLocation="http://www.thymeleaf.org/extras/spring-security">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>License Marketplace System</title>
     <meta charset="UTF-8">
@@ -12,10 +11,10 @@
     <h1>License Marketplace System</h1>
     <nav class="user-menu">
         <!-- Khi đã đăng nhập: hiển thị tên người dùng + menu -->
-        <div class="dropdown" sec:authorize="isAuthenticated()">
+        <div class="dropdown" th:if="${loggedInUser != null}">
             <button class="user-toggle" aria-haspopup="true" aria-expanded="false">
                 <span class="avatar" aria-hidden="true">👤</span>
-                <span class="user-name" sec:authentication="name">Người dùng</span>
+                <span class="user-name" th:text="${loggedInUser.fullName}">Họ và tên</span>
                 <span class="chevron" aria-hidden="true">▾</span>
             </button>
             <ul class="dropdown-menu" role="menu">
@@ -25,7 +24,6 @@
                 <li class="menu-divider" role="separator"></li>
                 <li role="none">
                     <form th:action="@{/logout}" method="post">
-                        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
                         <button class="logout-btn" type="submit">Đăng xuất</button>
                     </form>
                 </li>
@@ -33,7 +31,7 @@
         </div>
 
         <!-- Khi chưa đăng nhập: hiển thị Đăng ký/Đăng nhập -->
-        <div class="dropdown" sec:authorize="isAnonymous()">
+        <div class="dropdown" th:if="${loggedInUser == null}">
             <button class="user-toggle" aria-haspopup="true" aria-expanded="false">
                 <span class="avatar" aria-hidden="true">👤</span>
                 <span class="user-name">Tài khoản</span>
